...
    <string name="confirmation">Confirmation!</string>
    <string name="request_text_in_dialog">Are you sure you want to request for this book?</string>
    <string name="no">No</string>

    <string name="sign_up_title">Sign Up</string>
    <string name="forgot_pass_title">Forgot Password</string>
    <string name="book_detail_title">Book Detail</string>
    <string name="home_title">Home</string>


    <string name="recent_searches">Recent Searches</string>
    <string name="top_searches">Top Searches</string>
    <string name="results_string">Search Results</string>
...
