...
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/signin_button" />

    <TextView
        android:id="@+id/forget_password"
        style="@style/OpaqueRegular14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
...
