...
                android:src="@drawable/select"
                android:visibility="gone" />
        </RelativeLayout>


        <TextView
            android:id="@+id/book_name"
            style="@style/ClearBold14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@{bookModel.bookName}" />

        <TextView
            android:id="@+id/book_author"
            style="@style/ClearRegular12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@{bookModel.authersName}" />

        <TextView
            android:id="@+id/book_lender"
            style="@style/OpaqueRegular12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
...
