<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/main_grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E8E8E8">

            <TextView
                android:id="@+id/fragment_title"
                style="@style/ClearMedium14"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:text="@string/results_string">

            </TextView>

        </LinearLayout>


        <GridView
            android:id="@+id/book_grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:horizontalSpacing="1dp"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp" />


    </LinearLayout>

        <ProgressBar
            android:id="@+id/grid_view_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />

        <LinearLayout
            android:id="@+id/view_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/error_text_view"
                style="@style/OpaqueRegular11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/empty_view_text"
                style="@style/ClearMedium18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp" />
        </LinearLayout>
    </RelativeLayout>
</layout>