...
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/book1" />

            <TextView
                android:id="@+id/book_name_in_book_layout"
                style="@style/ClearMedium18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@{bookModel.bookName}" />

            <TextView
                android:id="@+id/book_auther_in_book_layout"
                style="@style/SemiOpaqueRegular14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
...
